# IEP

lucrarea_4/: .gitignore  CMakeLists.txt
lucrarea_4/inc/: Circle.hpp  Figure.hpp  Rectangle.hpp  main.hpp
lucrarea_4/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  main.cpp
lucrarea_5/: .gitignore  CMakeLists.txt
lucrarea_5/inc/: Circle.hpp  Coordinates.hpp  Figure.hpp  Rectangle.hpp  main.hpp
lucrarea_5/src/: Circle.cpp  Coordinates.cpp  Figure.cpp  Rectangle.cpp  main.cpp
lucrarea_6/: CMakeLists.txt
lucrarea_6/inc/: Phone.hpp  Server.hpp  Task.hpp  main.hpp
lucrarea_6/src/: Phone.cpp  Server.cpp  Task.cpp  main.cpp
